<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    public function up(): void
    {
        Schema::create('subaks', function (Blueprint $table) {
            $table->id();
            $table->string('name');
            $table->string('region');
            $table->string('village')->nullable();
            $table->string('district')->nullable();
            $table->text('description')->nullable();
            $table->timestamps();
        });
    }

    public function down(): void
    {
        Schema::dropIfExists('subaks');
    }
};
